# pi-tk-workflow

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  TODOs.md  files_changed.txt  install.sh  package.json  proposal-irf-improvements.md  pyproject.toml  research.md
.tickets/: abc-123.md  pt-1d6c.md  pt-1x64.md  pt-1zkq.md  pt-2xr4.md  pt-33o0.md  pt-4y31.md  pt-62g6.md  pt-6hpl.md  pt-6zp2.md  pt-7li0.md  pt-7mvl.md  pt-7p2i.md  pt-7t1n.md  pt-8o4i.md  pt-agl6.md  pt-aoq0.md  pt-ba0n.md  pt-bska.md  pt-bsuf.md  pt-buwk.md  pt-c4lo.md  pt-ce2e.md  pt-cje7.md  pt-cvj1.md  pt-d68t.md  pt-d9rg.md  pt-epyf.md  pt-et1v.md  pt-fo58.md  pt-fpz7.md  pt-gnhr.md  pt-hpme.md  pt-igly.md  pt-ihfv.md  pt-im9d.md  pt-k2rk.md  pt-ls9y.md  pt-m06z.md  pt-m387.md  (+70 more)
agents/: closer.md  fixer.md  implementer.md  irf-planner.md  researcher.md  review-merge.md  reviewer-general.md  reviewer-second-opinion.md  reviewer-spec-audit.md
config/: install-manifest.txt  model-aliases.json  settings.json
demo/: __main__.py  hello.py
docs/: AGENTS.md.template  README.md  architecture.md  commands.md  configuration.md  deprecation-policy.md  features.md  getting-started.md  ralph-integration-plan.md  ralph-logging.md  ralph-loop.md  ralph.md  subagent-simplification.md  tf-followups-scan-manual-test.md  ticket_factory.md  workflows.md
prompts/: irf-backlog-lite.md  irf-backlog-ls.md  irf-backlog.md  irf-baseline-lite.md  irf-baseline.md  irf-followups-lite.md  irf-followups.md  irf-from-openspec-lite.md  irf-from-openspec.md  irf-lite.md  irf-plan-consult.md  irf-plan-review.md  irf-plan.md  (+29 more)
(+761 files in other folders)
